<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/transaction_mode_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="@dimen/default_margin"
        android:background="@drawable/square_bg"
        android:backgroundTint="@color/heading_background"
        android:paddingTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/transaction_heading"
        app:drawableTopCompat="@drawable/ic_debit_icon_24" />

    <TextView
        android:id="@+id/transaction_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/small_margin"
        tools:text="@string/transfer_heading"
        android:textColor="@color/black"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/transaction_mode_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/transaction_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/small_margin"
        tools:text="@string/date_time"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/transaction_mode_icon"
        app:layout_constraintTop_toBottomOf="@id/transaction_heading" />

    <TextView
        android:id="@+id/transaction_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/default_margin"
        tools:text="@string/amount"
        android:textColor="@color/black"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/transaction_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/default_margin"
        tools:text="@string/transaction_status"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_amount" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_date" />
</androidx.constraintlayout.widget.ConstraintLayout>