<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.MainActivity">

    <TextView
        android:id="@+id/back_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@drawable/rounded_bg"
        android:clickable="true"
        android:paddingStart="13dp"
        android:textAlignment="center"
        app:drawableStartCompat="@drawable/ic_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menu_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:background="@drawable/rounded_bg"
        android:clickable="true"
        android:paddingStart="9dp"
        app:drawableStartCompat="@drawable/ic_menu_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/actionbar_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/transactions"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back_btn"
        app:layout_constraintEnd_toStartOf="@id/menu_btn"
        app:layout_constraintStart_toEndOf="@id/back_btn"
        app:layout_constraintTop_toTopOf="@id/back_btn" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:background="@color/white"
        android:padding="@dimen/concept_margin"
        app:cardCornerRadius="@dimen/concept_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionbar_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/concept_margin"
                android:layout_marginEnd="@dimen/concept_margin"
                android:background="@null"
                android:drawableStart="@drawable/ic_search_24"
                android:drawablePadding="5dp"
                android:hint="@string/search_transaction"
                android:maxLines="1"
                app:layout_constraintEnd_toStartOf="@id/filter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/filter"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:maxHeight="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/small_margin"
                android:textAlignment="center"
                android:background="@drawable/square_bg"
                android:padding="6dp"
                android:text="@string/filter"
                android:textColor="@color/purple"
                app:drawableEndCompat="@drawable/ic_filter_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
       </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:background="@color/white"
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        app:tabIndicatorColor="@color/purple_700"
        app:tabSelectedTextColor="@color/purple_700" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>